Fix root list colour in metrics summary page dark mode

--- a/src/frontend/packages/core/src/features/metrics/metrics/metrics.component.theme.scss
+++ b/src/frontend/packages/core/src/features/metrics/metrics/metrics.component.theme.scss
@@ -2,6 +2,7 @@
   $primary: map-get($theme, primary);
   $background: map-get($theme, background);
   $tree-background-color:  mat-color($background, background);
+  $is-dark: map-get($theme, is-dark);
 
   // Last item uses background color to overwrisr the side bar to make it appear
   // like its the last item in th tree
@@ -10,6 +11,11 @@
   }
 
   .metrics-tree__root {
-    background-color: mat-contrast($primary, 300);
+    // Should match .mat-drawer-container
+    @if $is-dark == true {
+      background-color: #ffffff;
+    } @else {
+      background-color: mat-contrast($primary, 300);
+    }
   }
 }
